动画展示图标制作

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>batman</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
   <style id="styleTag"></style>
 </head>
 <body>
@@ -12,7 +12,7 @@
   <pre id="code"></pre>
 </div>
 <div class="preview-wrapper">
-    <img src="/img/wall.jpg.jpg" alt="">
+    <img src="./img/wall.jpg.jpg" alt="">
     <div class="preview">
         <div class="batman">
             <div class="inner1">
@@ -32,6 +32,6 @@
           </div>
     </div>
 </div>
-<script src="/main.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
