动画展示画图过程

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <pre id="code"></pre>
 </div>
 <div class="preview-wrapper">
-    <img src="./img/wall.jpg.jpg" alt="">
+    <img src="./img/wall.jpg" alt="">
     <div class="preview">
         <div class="batman">
             <div class="inner1">
